Revert "- initial document count must be number of unique documents per node."